namespace java io.github.helloworlde.thrift


service MultipleService {

    string echo(1: string message);
}